# zakatable

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: __init__.py  conftest.py
tests/integration/: test_api.py  test_calculator.py  test_calculator_advanced.py
tests/unit/: test_cache.py  test_commodities.py  test_forex.py  test_screener.py
zakatable/: __init__.py  cache.py  calculator.py  commodities.py  forex.py  screener.py  session.py
zakatable/api/: main.py
zakatable/api/static/: index.html
zakatable/api/static/css/: styles.css
zakatable/api/static/js/: app.js
zakatable/config/: business_rules.yaml  overrides.yaml
